--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/all.min.css">
-     <link rel="stylesheet" href="recep.css">
+     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="bootstrap.min.css"> 
    <script src="jquery-3.5.1.min.js"></script>
   <script src="popper.min.js"></script>
